brat/test/golden/error/multilambda-id3.brat.golden
Error in test/golden/error/multilambda-id3.brat on line 2:
f = { true => |;||false =>|;|;|}
              ^^^

  Elab error "Noun required at this position"

